--- a/api/bairro/models/Bairro.settings.json
+++ b/api/bairro/models/Bairro.settings.json
@@ -25,7 +25,8 @@
     },
     "noticia": {
       "collection": "noticia",
-      "via": "bairros"
+      "via": "bairros",
+      "autoPopulate": false
     },
     "descricao": {
       "default": "",
@@ -41,11 +42,8 @@
     },
     "eventos": {
       "collection": "evento",
-      "via": "bairros"
-    },
-    "guias": {
-      "collection": "guia",
-      "via": "bairros"
+      "via": "bairros",
+      "autoPopulate": false
     },
     "menus": {
       "collection": "menu",
@@ -63,6 +61,10 @@
     "preposicao": {
       "default": "",
       "type": "string"
+    },
+    "guias": {
+      "collection": "guia",
+      "via": "bairros"
     }
   }
 }
