--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "strapi-plugin-settings-manager": "3.0.0-beta.15",
     "strapi-plugin-upload": "3.0.0-beta.15",
     "strapi-plugin-users-permissions": "3.0.0-beta.15",
+    "strapi-provider-upload-aws-s3": "^3.0.0-alpha.15",
     "strapi-upload-aws-s3": "0.0.1-security",
     "strapi-utils": "3.0.0-beta.15"
   },
