changed default for recorrencia

--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -6,7 +6,10 @@
     "description": ""
   },
   "options": {
-    "timestamps": true
+    "timestamps": [
+      "createdAt",
+      "updatedAt"
+    ]
   },
   "attributes": {
     "titulo": {
@@ -36,8 +39,7 @@
     "imagem_destacada": {
       "model": "file",
       "via": "related",
-      "plugin": "upload",
-      "required": false
+      "plugin": "upload"
     },
     "old_imagem_destacada": {
       "default": "",
@@ -71,7 +73,7 @@
       "type": "string"
     },
     "recorrencia": {
-      "default": "sem recorrencia",
+      "default": "sem recorrência",
       "type": "enumeration",
       "required": true,
       "enum": [
@@ -83,7 +85,7 @@
       ]
     },
     "classificacao_indicativa": {
-      "default": "",
+      "default": "sem classificação indicativa",
       "type": "enumeration",
       "enum": [
         "sem classificação indicativa",
@@ -100,11 +102,9 @@
       "type": "integer"
     },
     "imported_category": {
-      "default": false,
       "type": "boolean"
     },
     "imported_tag": {
-      "default": false,
       "type": "boolean"
     },
     "hora_inicio": {
@@ -116,7 +116,6 @@
       "type": "string"
     },
     "imported_bairro": {
-      "default": false,
       "type": "boolean"
     },
     "cidade": {
