--- a/api/guia/models/Guia.settings.json
+++ b/api/guia/models/Guia.settings.json
@@ -40,17 +40,20 @@
     "categorias": {
       "collection": "categoria",
       "via": "guias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "tags": {
       "collection": "tag",
       "via": "guias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "bairros": {
       "collection": "bairro",
       "via": "guias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "user": {
       "model": "user",
@@ -132,7 +135,8 @@
     "cidade": {
       "collection": "cidade",
       "via": "guias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "cidade_destaque": {
       "model": "cidade",
