--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
+  "main": "./server.js",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi",
+    "strapi": "node_modules/strapi/bin/strapi.js",
     "lint": "eslint ."
   },
   "devDependencies": {
