--- a/api/guia/models/Guia.settings.json
+++ b/api/guia/models/Guia.settings.json
@@ -52,8 +52,7 @@
     "bairros": {
       "collection": "bairro",
       "via": "guias",
-      "dominant": true,
-      "autoPopulate": false
+      "dominant": true
     },
     "user": {
       "model": "user",
