--- a/api/categoria/models/Categoria.settings.json
+++ b/api/categoria/models/Categoria.settings.json
@@ -32,7 +32,8 @@
     },
     "noticias": {
       "collection": "noticia",
-      "via": "categorias"
+      "via": "categorias",
+      "autoPopulate": false
     },
     "wpid": {
       "default": "",
@@ -54,10 +55,6 @@
       "plugin": "upload",
       "required": false
     },
-    "eventos": {
-      "collection": "evento",
-      "via": "categorias"
-    },
     "wp_parent_id": {
       "default": "",
       "type": "integer"
@@ -68,7 +65,13 @@
     },
     "guias": {
       "collection": "guia",
-      "via": "categorias"
+      "via": "categorias",
+      "autoPopulate": false
+    },
+    "eventos": {
+      "collection": "evento",
+      "via": "categorias",
+      "autoPopulate": false
     }
   }
 }
