--- a/api/cidade/models/Cidade.settings.json
+++ b/api/cidade/models/Cidade.settings.json
@@ -32,17 +32,19 @@
       "default": "",
       "type": "string"
     },
-    "undefined": {
-      "collection": "evento",
-      "via": "cidade"
-    },
     "guias": {
       "collection": "guia",
-      "via": "cidade"
+      "via": "cidade",
+      "autoPopulate": false
     },
     "guias_destacados": {
       "collection": "guia",
       "via": "cidade_destaque"
+    },
+    "eventos": {
+      "collection": "evento",
+      "via": "cidade",
+      "autoPopulate": false
     }
   }
 }
