adding more fields to user

--- a/api/bairro/models/Bairro.settings.json
+++ b/api/bairro/models/Bairro.settings.json
@@ -65,6 +65,11 @@
     "eventos": {
       "collection": "evento",
       "via": "bairros"
+    },
+    "undefined": {
+      "collection": "user",
+      "via": "bairro",
+      "plugin": "users-permissions"
     }
   }
 }
