--- a/api/cidade/models/Cidade.settings.json
+++ b/api/cidade/models/Cidade.settings.json
@@ -45,6 +45,11 @@
       "collection": "evento",
       "via": "cidade",
       "autoPopulate": false
+    },
+    "undefined": {
+      "collection": "user",
+      "via": "cidade",
+      "plugin": "users-permissions"
     }
   }
 }
