--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ results
 node_modules
 .node_history
 config/environments/production/database.json
-
+ecosystem.config.js
 
 ############################
 # Tests
