--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "eslint-plugin-react": "^7.14.0"
   },
   "dependencies": {
+    "@rickspirit/strapi-provider-email-nodemailer": "^1.0.1",
     "lodash": "^4.17.5",
+    "nodemailer": "^6.3.0",
     "strapi": "3.0.0-beta.15",
     "strapi-admin": "3.0.0-beta.15",
     "strapi-hook-mongoose": "3.0.0-beta.15",
@@ -29,6 +31,8 @@
     "strapi-plugin-settings-manager": "3.0.0-beta.15",
     "strapi-plugin-upload": "3.0.0-beta.15",
     "strapi-plugin-users-permissions": "3.0.0-beta.15",
+    "strapi-provider-email-nodemailer": "^1.0.2",
+    "strapi-provider-email-sendgrid": "^3.0.0-beta.15",
     "strapi-provider-upload-aws-s3": "^3.0.0-alpha.15",
     "strapi-upload-aws-s3": "0.0.1-security",
     "strapi-utils": "3.0.0-beta.15"
