--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -144,6 +144,9 @@
     "object_user": {
       "default": "",
       "type": "json"
+    },
+    "approved": {
+      "type": "boolean"
     }
   }
 }
