--- a/api/cidade/models/Cidade.settings.json
+++ b/api/cidade/models/Cidade.settings.json
@@ -32,15 +32,9 @@
       "default": "",
       "type": "string"
     },
-    "eventos": {
-      "collection": "evento",
-      "via": "cidade",
-      "autoPopulate": false
-    },
     "undefined": {
-      "collection": "user",
-      "via": "cidade",
-      "plugin": "users-permissions"
+      "collection": "evento",
+      "via": "cidade"
     },
     "guias": {
       "collection": "guia",
