--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -147,6 +147,10 @@
     },
     "approved": {
       "type": "boolean"
+    },
+    "reviewevento": {
+      "model": "reviewevento",
+      "via": "evento"
     }
   }
 }
