--- a/api/noticia/models/Noticia.settings.json
+++ b/api/noticia/models/Noticia.settings.json
@@ -108,6 +108,10 @@
     },
     "approved": {
       "type": "boolean"
+    },
+    "comentarios": {
+      "collection": "comentario",
+      "via": "noticia"
     }
   }
 }
