ajustes nos models das apis

--- a/api/noticia/models/Noticia.settings.json
+++ b/api/noticia/models/Noticia.settings.json
@@ -112,6 +112,9 @@
     "comentarios": {
       "collection": "comentario",
       "via": "noticia"
+    },
+    "descricaoJson": {
+      "type": "json"
     }
   }
 }
