added galerias de imagens

--- a/api/noticia/models/Noticia.settings.json
+++ b/api/noticia/models/Noticia.settings.json
@@ -115,6 +115,11 @@
     },
     "descricaoJson": {
       "type": "json"
+    },
+    "galeria_imagens": {
+      "collection": "file",
+      "via": "related",
+      "plugin": "upload"
     }
   }
 }
