--- a/api/comentarioguia/models/Comentarioguia.settings.json
+++ b/api/comentarioguia/models/Comentarioguia.settings.json
@@ -37,6 +37,23 @@
     },
     "classificacao": {
       "type": "decimal"
+    },
+    "user": {
+      "model": "user",
+      "plugin": "users-permissions"
+    },
+    "guia": {
+      "model": "guia",
+      "via": "comentarioguias"
+    },
+    "like": {
+      "type": "json"
+    },
+    "deslike": {
+      "type": "json"
+    },
+    "report": {
+      "type": "json"
     }
   }
 }
