adicionado comentario ao evento

--- a/api/comentarioevento/models/Comentarioevento.settings.json
+++ b/api/comentarioevento/models/Comentarioevento.settings.json
@@ -43,7 +43,8 @@
       "plugin": "users-permissions"
     },
     "evento": {
-      "model": "evento"
+      "model": "evento",
+      "via": "comentarioeventos"
     },
     "like": {
       "type": "json"
