--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -150,6 +150,10 @@
     },
     "reviewevento": {
       "model": "reviewevento"
+    },
+    "comentarioeventos": {
+      "collection": "comentarioevento",
+      "via": "evento"
     }
   }
 }
