adicionado url de referencia

--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -154,6 +154,9 @@
     "comentarioeventos": {
       "collection": "comentarioevento",
       "via": "evento"
+    },
+    "url_original_reference": {
+      "type": "string"
     }
   }
 }
