titulo e slug da noticia unico

--- a/api/noticia/models/Noticia.settings.json
+++ b/api/noticia/models/Noticia.settings.json
@@ -15,7 +15,8 @@
     "titulo": {
       "default": "",
       "type": "string",
-      "required": true
+      "required": true,
+      "unique": true
     },
     "descricao": {
       "default": "",
@@ -37,7 +38,8 @@
     },
     "slug": {
       "default": "",
-      "type": "string"
+      "type": "string",
+      "unique": true
     },
     "tags": {
       "collection": "tag",
