--- a/api/evento/models/Evento.settings.json
+++ b/api/evento/models/Evento.settings.json
@@ -157,6 +157,9 @@
     },
     "url_original_reference": {
       "type": "string"
+    },
+    "featured": {
+      "type": "boolean"
     }
   }
 }
