--- a/api/noticia/models/Noticia.settings.json
+++ b/api/noticia/models/Noticia.settings.json
@@ -44,12 +44,14 @@
     "tags": {
       "collection": "tag",
       "via": "noticias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "categorias": {
       "collection": "categoria",
       "via": "noticias",
-      "dominant": true
+      "dominant": true,
+      "autoPopulate": false
     },
     "wp_user_id": {
       "default": "",
