--- a/api/guia/models/Guia.settings.json
+++ b/api/guia/models/Guia.settings.json
@@ -195,6 +195,10 @@
     },
     "featured": {
       "type": "boolean"
+    },
+    "undefined": {
+      "collection": "guianaoexistemais",
+      "via": "guia"
     }
   }
 }
